--- a/github-action-01/.github/workflows/deploy.yml
+++ b/github-action-01/.github/workflows/deploy.yml
@@ -24,8 +24,9 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/testing:latest .
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/testing:latest
+         docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/testing:latest .  # Current directory (.) is the context
+         docker push ${{ secrets.DOCKER_HUB_USERNAME }}/testing:latest
+
 
       - name: Azure Login
         uses: azure/login@v1
