--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Deploy to Azure Container Apps
         run: |
           az containerapp update \
-            --name testing \
-            --resource-group hello-env \
+            --name github-action \
+            --resource-group online-mart-api \
             --image ${{ secrets.DOCKER_HUB_USERNAME }}/testing:latest 
          
